# audioVisualizer

./: .dockerignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: settings.py
src/: __init__.py  main.py
src/analysis/: __init__.py  audio_features.py  beat_detector.py  fft_analyzer.py
src/audio/: __init__.py  audio_buffer.py  audio_manager.py  audio_source.py  file_player.py  microphone_input.py
src/effects/: __init__.py  color_mapper.py  post_processing.py  style_transfer.py
src/synthesizer/: __init__.py  envelope.py  keyboard_mapping.py  note.py  oscillator.py  synthesizer.py
src/ui/: __init__.py  control_panel.py  file_browser.py
src/visualization/: __init__.py  base_visualizer.py  note_visualizer.py  particle_system.py  radial_pattern.py  renderer.py  spectrum_bars.py  visualizer_manager.py  waveform.py
