[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-visualizer"
version = "1.0.0"
description = "Real-time audio visualizer with spectrum analysis, beat detection, and piano synthesizer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Muhammad Ibrahim Kartal", email = "github@muhkartal.com"}
]
keywords = [
    "audio",
    "visualizer",
    "spectrum",
    "fft",
    "beat-detection",
    "pygame",
    "synthesizer",
    "music"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "sounddevice>=0.4.6",
    "librosa>=0.10.1",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pygame>=2.5.0",
]

[project.optional-dependencies]
style-transfer = [
    "onnxruntime>=1.14.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/muhkartal/audio-visualizer"
Repository = "https://github.com/muhkartal/audio-visualizer"
Issues = "https://github.com/muhkartal/audio-visualizer/issues"

[project.scripts]
audio-visualizer = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
